--- a/root/index.html
+++ b/root/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<title>frontendmentor | Four Card Feature Section</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="icon" type="image/x-icon" href="images/favicon-32x32.png">
