--- a/root/index.html
+++ b/root/index.html
@@ -14,12 +14,12 @@
 	</head>
 	
 	<body>
-		<section class="heroContainer" role="banner">
-			<h1 class="heroHeader">Reliable, efficient delivery <span class="strongHero">Powered by Technology</span></h1>
-			<p class="heroDesc">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
-		</section>
-		
-		<main class="cardContainer" role="main">
+		<main class="cardContainer">
+			<section class="heroContainer">
+				<h1 class="heroHeader">Reliable, efficient delivery <span class="strongHero">Powered by Technology</span></h1>
+				<p class="heroDesc">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+			</section>
+			
 			<ul>
 				<li class="card card1">
 					<div class="text">
